<resources>
    <string name="app_name">Concern for Children</string>
    <string name="Mission_title">CFC Mission</string>
    <string name="Vision_title">CFC Vision</string>
    <string name="Foundertitle">FOUNDERS \n Dr. Mrs. FLORENCE DURAIRAJ, M.A., M.Ed., D.Litt.,</string>

    <string name="Mission_content">CONCERN  FOR  CHILDREN ( C F C ) Ministries – a project of Bethel Ministries-Chennai-23,pioneer in School Education, developing Bethel Group of Schools  in Chennai , endeavouring since 1997 for the cause of Children Development, Training ,Counselling and Education. In the year 2013  the Lord has enabled us to have the CFC Teachers Training in 27 places in Tamilnadu, to train around 2500 children ministry workers and Sunday School Teachers and vocation Scripture Class teachers and to reach over 1Lakh children through CFC Literatures and teaching aids. CFC team of Sunday School teachers and experienced children ministry leaders/trainers, Cultural Team members  have worked together effectively to prepare the teaching materials, students work books, Teachers/Directors  Guides for the teachers training and CFC classes books, DVDs consists of theme songs, choruses and action songs. Special Missionary Story series of  Rev. Canon Arthur Margochis, Mary Slessor,  Sadhu Sundersigh , Geroge Muller, C.T.Studd and Samuel Morris are prepared with flash cards. Also teaching aids to encourage the students to have better knowledge of the Bible stories under the able guidance and supervision of the Director-CFC. We would appeal to all the church leaders/ Pastors ,Sunday School Teachers and children ministry workers to use the  materials prepared and made available for the vocational scripture classes during summer holidays and  children development programme.</string>
    <string name="Vision_content">C F C with a motto " Being Led and Transformed " marches forward in association with like minded Institutions,Missions and Churches for the cause of teaching and training the children ministry workers,Sunday School Teachers and other leaders to join hands to reach the children with the Gospel, train them to know the truth and lead them in the way of the scripture. Our Mission Workers and associates are doing great job for the Lord in teaching ,training the teachers for the past 12years and the Lord blessed all His works in a wonderful way .During the year 2011 in March/May the Lord has enabled us to have the Teachers Training in 19 places,to train around 1700 children ministry workers and Sunday School Teachers and vocation Scripture Class teachers from 347 churches and organizations.The Lord has enabled us to do the ministry for the past 12 years and we are thankful to all the church leaders/Pastors/Institutions Heads for their co-operation and involvement in developing the children ministry.The LORD has enabled us to produce cassettes, CDs and DVDs consisting of theme songs, choruses and action songs and to prepare, print students work books, Teachers/Directors Guides for the teachers training and CFC Vocation Scripture classes. A team of dedicated Sunday School teachers and experienced children ministry leaders/trainers have worked together in preparation of the books and other materials under the able guidance and supervision of the Director-CFC. This year the theme was based on 1 Thes 5:21 " Hold Fast" and with day\'s topic Hold Fast God, Hold Fast Wisdom, Hold Fast Faith, Hold Fast Humbleness, Hold Fast Favor, Hold Fast Righteousness .We have taken best efforts to enlighten the children to understand and follow the theme lesson and the students work book ,teachers/directors guide have been prepared for easy understanding the lesson at different age group. Theme song, choruses and songs have been prepared with much prayers , care and the theme in mind for better understanding of the subject. Special Missionary Story-Life History of Sadhu Sundersingh has been prepared with colourful flash cards to encourage the students and to know the story better and for the teachers this will be a good teaching aid. The students work book and teachers guide,and other materials are prepared to be used widely in the rural and urban areas so that any student can easily follow the curriculum for the Beginners, Primary, Junior and Senior levels.Efforts have been taken to present the literature in English and Hindi and the Lord has opened a way to reach around 700 children in Andamans-Port Blair. Our team has spent around 9 days in Andamans From 30th April to 9th May 2011 and the venue was Maranatha Church, Haddo Port Blair. All the 700 children have attended the CFC scripture classes ,enjoying the songs,dance and teachings and many have accepted the Lord. It was a revival for children and teachers in Andamans and we praise and than the Lord for using our team in a special way. Out of the 19 teachers training 700 scripture class teachers and participating 347 churches ,Missions and Children Ministries , 13 Mission workers and pastors reached around 100000 Children with the word of God. We feel a great need for trained children ministry workers, training camps and retreat centres to coordinate with local churches and organizationsDuring the year 2012 in March/May BETHEL ASSEMBLIES OF INDIA ( BAI ) is a unit of Bethel Mission and Ministries encouraging the native trained workers to form prayer cells, New Believers Fellowship Centres. Within a span of 9 years our church workers have planted over 15 churches and we endeavour to plant 25 churches before the end of the year 2011. Many of the churches are functioning in villages of Kanyakumari,Namakkal,Coimbatore,The Nilgiris,Kanjipuram, Vellore and Chennai districts of Tamilnadu. We are praying open a Mission field and church at Andamans to reach the unreached Island people and natives with the gospel.</string>
    <string name="Founder_content"> Dr. Mrs. Florence Durairaj was born in May 18th, 1953 at Kanyakumari district in Tamilnadu and had her college education from Scott Christian College, Nagercoil and finished her B.Sc., degree in Maths. In 1975 she got married and moved to Madras and then continued her studies and completed B.Ed., with high distinction and subsequently passed M.A in Sociology and passed her M.Ed., in education.
\n    She being an outstanding teacher and a social worker and along with her husband she worked in many village for adult literacy programme, children\'s education and involved in Gospel work. She was involved in children\'s ministries in churches, counselling children and women in various churches and in organisations. She is the Founder-Principal of "Bethel Matriculation Higher Secondary School in Ayanavaram established in the year 1983 catering the needs of about 1800 students and leads a team of around 90 staff both teaching and administrative nature.
\n    The able leadership of her has produced many centum results in public examinations and the students are specially trained in Arts and cultural programmes and sports activities and the students have participated in district level and state level activities. The school has so far presented 10 sets of Matriculation and 8 sets of Higher Secondary students with 95 % pass during the academic year. The students have excelled in cultural activities and selected for district and state level competitions and in TV competitions.
\n    She was awarded \'BHARAT JYOTI AWARD\' by International Integrity Peace and Friendship Society, Bangalore in December 1999 for her outstanding contribution in Education and Academician Award by Sankara Mela Parvani in 1996. The hard work of her in the educational field was identified by the Indian Theological and Research Institute in Madras and awarded Doctor of Literature in June 2002 at the National level conference.
\n    She aims to uplift the economically weaker section of the society and for the welfare of the women development in terms of values life, social status and for spiritual growth. She endeavours to serve the community for the cause of Education as the leader of this school and strongly believes that the "Fear of the Lord is the Beginning of the Wisdom". With this vision the she strives forward in bringing up the Children of the economically weaker section of the Society with quality education. She is also the Associate Director of Bethel Trust and undertakes projects for Children Development Programme, Adult Literacy, and social development in villages and among the Hill Tribes.</string>




    <string name="Founder1_content"> Rev. Dr. N. Durairaj was born in August 15th, 1947, at Tirunelvelli District in Tamil Nadu and had his Bachelor Degree in Science from Madras University. He moved to Madras in the year 1970 and was involved in social, spiritual activities among the youths. He is a life member of the Madras YMCA Esplanade Branch and active management committee member.
\n    He got married in the year 1975 and along with his wife involves in village Evangelism, conducting awareness programme, and adult literacy programme in the rural areas. He was actively involved in leadership training for the rural and urban evangelical workers and given training for a team of twelve batches and about 135 rural and urban social workers and the evangelical workers.
\n    He has conducted Adult literacy programme in four districts of Tamil Nadu and Vocational Bible School Teachers Training programme for over 1000 workers in 15 years. He is the Correspondent and Secretary of"BethelMatriculation and HigherSecondary School", Ayanavaram, Chennai - 23, recognised by the Government of Tamil Nadu which caters the needs of over 1800 students with a team of 90 Teaching and Non-teaching staff members.
\n    He is the elected Vice-president of the Tamil Nadu Nursery and Primary School, Management Associations, Chennai, and serves for the cause of education and social work.
\n    He is also involved in teaching and preaching ministries in churches, and conducts seminars and conference in promoting education, social awareness and women\'s welfare projects and programmes.
\n    He has an urge to promote quality education and welfare of the destitute children and endeavours teamwork for this cause. He has been given ministerial Ordination by the Universal Christian Church - A Unit of World Churches and Organisations in January 2002 and awarded the Fellowship title by the Holy Trinity Bible Research Centre, Chennai, and a Unit of UWCO. He was awarded Doctor of Divinity in June 2002 by the Indian Theological and Research Institute in Chennai at a National level conference.</string>
    <string name="dr_rene_robin_n_dr_doreen_robin">Dr.Rene Robin \n Dr.Doreen Robin</string>
    <string name="rev_dr_n_durairaj_m_a_th_d_d">Rev. Dr. N. DURAIRAJ, M.A. Th., D.D.,</string>
    <string name="title_activity_map">Map</string>
    <string name="add1">14A AND 15 VEERASAMY MAIN ROAD,\n AYANAVARAM,\n CHENNAI-600 023, \nTAMIL NADU,\n INDIA.</string>
    <string name="nos">044- 26454717/ 9840044455/ 9840778935/ 9840222341/ 9444222195</string>


</resources>
